--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,49 @@
 body {
   font-family: Lato, sans-serif;
 }
+
+.carousel-wrapper {
+  max-width: 500px;
+  padding: 30px 0;
+  margin: 30px auto 0;
+  position: relative;
+}
+
+.carousel {
+  padding: 0;
+  margin: auto;
+  width: 310px;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+
+  &__item {
+    display: block;
+    margin-left: 0;
+    transition: margin-left 300ms linear;
+  }
+
+  &__dots-wrap {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  &__dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+
+    &_active,
+    &:hover {
+      background-color: #717171;
+    }
+  }
+}
