--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,48 +8,52 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.carousel-wrapper {
+.container {
+  padding: 50px 0 30px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
   max-width: 500px;
-  padding: 30px 0;
-  margin: 30px auto 0;
   position: relative;
+}
+
+.carousel-container {
+  width: 350px;
+  overflow: hidden;
 }
 
 .carousel {
   padding: 0;
-  margin: auto;
-  width: 310px;
-  list-style: none;
+  margin: 0;
+  position: relative;
+  left: 0;
   display: flex;
-  justify-content: space-between;
-  overflow: hidden;
 
   &__item {
-    display: block;
-    margin-left: 0;
-    transition: margin-left 300ms linear;
+    list-style-type: none;
+    margin: 0 20px;
+  }
+
+  &__btn {
+    margin: auto 0;
+    cursor: pointer;
   }
 
   &__dots-wrap {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
 
-  &__dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+    > .carousel__dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: #aaa8aa;
+      margin-right: 1%;
 
-    &_active,
-    &:hover {
-      background-color: #717171;
+      &_active {
+        background-color: #767476;
+      }
     }
   }
 }
