--- a/styles/main.css
+++ b/styles/main.css
@@ -61,46 +61,51 @@ h1 {
 body {
   font-family: Lato, sans-serif; }
 
-.carousel-wrapper {
-  max-width: 500px;
-  padding: 30px 0;
-  margin: 30px auto 0;
-  position: relative; }
-
-.carousel {
-  padding: 0;
+.container {
+  padding: 50px 0 30px;
   margin: auto;
-  width: 310px;
-  list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 500px;
+  position: relative; }
+
+.carousel-container {
+  width: 350px;
   overflow: hidden; }
+
+.carousel {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
   .carousel__item {
-    display: block;
-    margin-left: 0;
-    -webkit-transition: margin-left 300ms linear;
-    transition: margin-left 300ms linear; }
+    list-style-type: none;
+    margin: 0 20px; }
+  .carousel__btn {
+    margin: auto 0;
+    cursor: pointer; }
   .carousel__dots-wrap {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%); }
-  .carousel__dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    -webkit-transition: background-color 0.6s ease;
-    transition: background-color 0.6s ease; }
-    .carousel__dot_active, .carousel__dot:hover {
-      background-color: #717171; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 0; }
+    .carousel__dots-wrap > .carousel__dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: #aaa8aa;
+      margin-right: 1%; }
+      .carousel__dots-wrap > .carousel__dot_active {
+        background-color: #767476; }
 
 /*# sourceMappingURL=main.css.map */
